--- a/index.html
+++ b/index.html
@@ -9,28 +9,7 @@ redirect_from:
     - /index.php/
 ---
 
-	<!-- start banner Area -->
-	<section class="banner-area" id="home">
-		<div class="container">
-			<div class="row fullscreen d-flex align-items-center justify-content-center">
-				<div class="banner-content col-lg-6 col-md-6">
-					<h1>
-					Improved <br>
-					Production level <br>
-					with Robotics
-					</h1>
-					<p class="text-white text-uppercase">
-						Everyone wants the innovation through robotics
-					</p>
-					<a href="#" class="primary-btn header-btn text-uppercase">View Details</a>
-				</div>
-				<div class="banner-img col-lg-6 col-md-6">
-					<img class="img-fluid" src="img/banner-img.png" alt="">
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End banner Area -->
+
 	<!-- Start products Area -->
 	<section class="products-area section-gap">
 		<div class="container">
@@ -46,7 +25,7 @@ redirect_from:
 				<div class="col-lg-3 col-md-6">
 					<div class="single-product">
 						<div class="thumb">
-							<img src="img/p1.png" alt="">
+							<img src="{{ site.url }}/assets/img/p1.png" alt="">
 						</div>
 						<div class="details">
 							<h4>The Upper Eye</h4>
@@ -60,7 +39,7 @@ redirect_from:
 				<div class="col-lg-3 col-md-6">
 					<div class="single-product">
 						<div class="thumb">
-							<img src="img/p2.png" alt="">
+							<img src="{{ site.url }}/assets/img/p2.png" alt="">
 						</div>
 						<div class="details">
 							<h4>The Crab Wheel</h4>
@@ -74,7 +53,7 @@ redirect_from:
 				<div class="col-lg-3 col-md-6">
 					<div class="single-product">
 						<div class="thumb">
-							<img src="img/p3.png" alt="">
+							<img src="{{ site.url }}/assets/img/p3.png" alt="">
 						</div>
 						<div class="details">
 							<h4>The Plug Ninja</h4>
@@ -88,7 +67,7 @@ redirect_from:
 				<div class="col-lg-3 col-md-6">
 					<div class="single-product">
 						<div class="thumb">
-							<img src="img/p4.png" alt="">
+							<img src="{{ site.url }}/assets/img/p4.png" alt="">
 						</div>
 						<div class="details">
 							<h4>The Controller</h4>
@@ -108,7 +87,7 @@ redirect_from:
 		<div class="container-fluid">
 			<div class="row align-items-center">
 				<div class="col-lg-6 home-about-left no-padding">
-					<img class="mx-auto d-block img-fluid" src="img/about-img.png" alt="">
+					<img class="mx-auto d-block img-fluid" src="{{ site.url }}/assets/img/about-img.png" alt="">
 				</div>
 				<div class="col-lg-6 home-about-right no-padding">
 					<h1>Globally Connected <br>
@@ -146,7 +125,7 @@ redirect_from:
 				</div>
 				<div class="col-lg-6 about-video-right justify-content-center align-items-center d-flex relative">
 					<div class="overlay overlay-bg"></div>
-					<a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="img/play-btn.png" alt=""></a>
+					<a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="{{ site.url }}/assets/img/play-btn.png" alt=""></a>
 				</div>
 			</div>
 		</div>
@@ -241,19 +220,19 @@ redirect_from:
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col single-brand">
-					<img class="img-fluid" src="img/l1.png" alt="">
+					<img class="img-fluid" src="{{ site.url }}/assets/img/l1.png" alt="">
 				</div>
 				<div class="col single-brand">
-					<img class="img-fluid" src="img/l2.png" alt="">
+					<img class="img-fluid" src="{{ site.url }}/assets/img/l2.png" alt="">
 				</div>
 				<div class="col single-brand">
-					<img class="img-fluid" src="img/l3.png" alt="">
+					<img class="img-fluid" src="{{ site.url }}/assets/img/l3.png" alt="">
 				</div>
 				<div class="col single-brand">
-					<img class="img-fluid" src="img/l4.png" alt="">
+					<img class="img-fluid" src="{{ site.url }}/assets/img/l4.png" alt="">
 				</div>
 				<div class="col single-brand">
-					<img class="img-fluid" src="img/l5.png" alt="">
+					<img class="img-fluid" src="{{ site.url }}/assets/img/l5.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -274,7 +253,7 @@ redirect_from:
 			<div class="row">
 				<div class="col-lg-6 col-md-6 blog-left">
 					<div class="thumb">
-						<img class="img-fluid" src="img/b1.jpg" alt="">
+						<img class="img-fluid" src="{{ site.url }}/assets/img/b1.jpg" alt="">
 					</div>
 					<div class="detais">
 						<ul class="tags">
@@ -290,7 +269,7 @@ redirect_from:
 				</div>
 				<div class="col-lg-6 col-md-6 blog-right">
 					<div class="thumb">
-						<img class="img-fluid" src="img/b2.jpg" alt="">
+						<img class="img-fluid" src="{{ site.url }}/assets/img/b2.jpg" alt="">
 					</div>
 					<div class="detais">
 						<ul class="tags">
