--- a/_pages/elements.html
+++ b/_pages/elements.html
@@ -1,72 +1,15 @@
-	<!DOCTYPE html>
-	<html lang="zxx" class="no-js">
-	<head>
-		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="codepixer">
-		<!-- Meta Description -->
-		<meta name="description" content="">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>Robotics</title>
-
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<!--
-			CSS
-			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/nice-select.css">	
-			<link rel="stylesheet" href="css/hexagons.min.css">							
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/main.css">
-		</head>
-		<body>	
-			  <header id="header" id="home">
-			    <div class="container main-menu">
-			    	<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
-				      </div>
-				      <nav id="nav-menu-container">
-				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About Us</a></li>
-				          <li><a href="services.html">Services</a></li>
-				          <li><a href="products.html">Products</a></li>
-				          <li class="menu-has-children"><a href="">Blog</a>
-				            <ul>
-				              <li><a href="blog-home.html">Blog Home</a></li>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				            </ul>
-				          </li>						          
-				          <li><a href="contact.html">Contact</a></li>
-				          <li class="menu-has-children"><a href="">Dropdown</a>
-				            <ul>
-				              <li><a href="elements.html">Elements</a></li>	
-				              <li><a href="product-details.html">Product Details</a></li>
-				              <li class="menu-has-children"><a href="">Level 2</a>
-					            <ul>
-					              <li><a href="#">Item 1</a></li>
-					              <li><a href="#">Item 2</a></li>
-					            </ul>
-					          </li>	
-				            </ul>
-				          </li>				              
-				        </ul>
-				      </nav><!-- #nav-menu-container -->		    		
-			    	</div>
-			    </div>
-			  </header><!-- #header -->
+---
+layout: page
+title: "Thuộc Tính"
+h1-title: "Thuộc Tính"
+meta-title: "Thuộc Tính"
+description: ""
+meta-description: ""
+meta-keywords: ""
+permalink: "/gioi-thieu/"
+published: true
+sitemap: true
+---
 			  
 			<!-- start banner Area -->
 			<section class="banner-area relative" id="home">	
