--- a/_pages/products.html
+++ b/_pages/products.html
@@ -1,72 +1,15 @@
-	<!DOCTYPE html>
-	<html lang="zxx" class="no-js">
-	<head>
-		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="codepixer">
-		<!-- Meta Description -->
-		<meta name="description" content="">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>Robotics</title>
-
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<!--
-			CSS
-			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/nice-select.css">	
-			<link rel="stylesheet" href="css/hexagons.min.css">							
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/main.css">
-		</head>
-		<body>	
-			  <header id="header" id="home">
-			    <div class="container main-menu">
-			    	<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
-				      </div>
-				      <nav id="nav-menu-container">
-				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About Us</a></li>
-				          <li><a href="services.html">Services</a></li>
-				          <li><a href="products.html">Products</a></li>
-				          <li class="menu-has-children"><a href="">Blog</a>
-				            <ul>
-				              <li><a href="blog-home.html">Blog Home</a></li>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				            </ul>
-				          </li>						          
-				          <li><a href="contact.html">Contact</a></li>
-				          <li class="menu-has-children"><a href="">Dropdown</a>
-				            <ul>
-				              <li><a href="elements.html">Elements</a></li>	
-				              <li><a href="product-details.html">Product Details</a></li>
-				              <li class="menu-has-children"><a href="">Level 2</a>
-					            <ul>
-					              <li><a href="#">Item 1</a></li>
-					              <li><a href="#">Item 2</a></li>
-					            </ul>
-					          </li>	
-				            </ul>
-				          </li>				              
-				        </ul>
-				      </nav><!-- #nav-menu-container -->		    		
-			    	</div>
-			    </div>
-			  </header><!-- #header -->
+---
+layout: page
+title: "Sản phẩm"
+h1-title: "Sản phẩm"
+meta-title: "Sản phẩm"
+description: ""
+meta-description: ""
+meta-keywords: ""
+permalink: "/san-pham/"
+published: true
+sitemap: true
+---
 
 			<!-- start banner Area -->
 			<section class="banner-area relative" id="home">	
@@ -77,7 +20,7 @@
 							<h1 class="text-white">
 								Products				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="products.html"> Products</a></p>
+							<p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="products.html"> Products</a></p>
 						</div>	
 					</div>
 				</div>
@@ -99,7 +42,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p1.png" alt="">
+									<img src="{{ site.url }}/assets/img/p1.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Upper Eye</h4>
@@ -113,7 +56,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p2.png" alt="">
+									<img src="{{ site.url }}/assets/img/p2.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Crab Wheel</h4>
@@ -127,7 +70,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p3.png" alt="">
+									<img src="{{ site.url }}/assets/img/p3.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Plug Ninja</h4>
@@ -141,7 +84,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p4.png" alt="">
+									<img src="{{ site.url }}/assets/img/p4.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Controller</h4>
@@ -155,7 +98,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p1.png" alt="">
+									<img src="{{ site.url }}/assets/img/p1.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Upper Eye</h4>
@@ -169,7 +112,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p2.png" alt="">
+									<img src="{{ site.url }}/assets/img/p2.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Crab Wheel</h4>
@@ -183,7 +126,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p3.png" alt="">
+									<img src="{{ site.url }}/assets/img/p3.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Plug Ninja</h4>
@@ -197,7 +140,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p4.png" alt="">
+									<img src="{{ site.url }}/assets/img/p4.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Controller</h4>
@@ -211,7 +154,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p1.png" alt="">
+									<img src="{{ site.url }}/assets/img/p1.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Upper Eye</h4>
@@ -225,7 +168,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p2.png" alt="">
+									<img src="{{ site.url }}/assets/img/p2.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Crab Wheel</h4>
@@ -239,7 +182,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p3.png" alt="">
+									<img src="{{ site.url }}/assets/img/p3.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Plug Ninja</h4>
@@ -253,7 +196,7 @@
 						<div class="col-lg-3 col-md-6">
 							<div class="single-product">
 								<div class="thumb">
-									<img src="img/p4.png" alt="">
+									<img src="{{ site.url }}/assets/img/p4.png" alt="">
 								</div>
 								<div class="details">
 									<h4>The Controller</h4>
@@ -274,19 +217,19 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col single-brand">
-							<img class="img-fluid" src="img/l1.png" alt="">
+							<img class="img-fluid" src="{{ site.url }}/assets/img/l1.png" alt="">
 						</div>
 						<div class="col single-brand">
-							<img class="img-fluid" src="img/l2.png" alt="">
+							<img class="img-fluid" src="{{ site.url }}/assets/img/l2.png" alt="">
 						</div>
 						<div class="col single-brand">
-							<img class="img-fluid" src="img/l3.png" alt="">
+							<img class="img-fluid" src="{{ site.url }}/assets/img/l3.png" alt="">
 						</div>
 						<div class="col single-brand">
-							<img class="img-fluid" src="img/l4.png" alt="">
+							<img class="img-fluid" src="{{ site.url }}/assets/img/l4.png" alt="">
 						</div>
 						<div class="col single-brand">
-							<img class="img-fluid" src="img/l5.png" alt="">
+							<img class="img-fluid" src="{{ site.url }}/assets/img/l5.png" alt="">
 						</div>
 					</div>
 				</div>	
@@ -336,14 +279,14 @@
 							<div class="single-footer-widget mail-chimp">
 								<h6 class="mb-20">Instragram Feed</h6>
 								<ul class="instafeed d-flex flex-wrap">
-									<li><img src="img/i1.jpg" alt=""></li>
-									<li><img src="img/i2.jpg" alt=""></li>
-									<li><img src="img/i3.jpg" alt=""></li>
-									<li><img src="img/i4.jpg" alt=""></li>
-									<li><img src="img/i5.jpg" alt=""></li>
-									<li><img src="img/i6.jpg" alt=""></li>
-									<li><img src="img/i7.jpg" alt=""></li>
-									<li><img src="img/i8.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i1.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i2.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i3.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i4.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i5.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i6.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i7.jpg" alt=""></li>
+									<li><img src="{{ site.url }}/assets/img/i8.jpg" alt=""></li>
 								</ul>
 							</div>
 						</div>						
