--- a/_pages/elements.html
+++ b/_pages/elements.html
@@ -6,7 +6,7 @@ meta-title: "Thuộc Tính"
 description: ""
 meta-description: ""
 meta-keywords: ""
-permalink: "/gioi-thieu/"
+permalink: "/elements/"
 published: true
 sitemap: true
 ---
@@ -142,7 +142,7 @@ sitemap: true
 						<h3 class="mb-30">Left Aligned</h3>
 						<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/d.jpg" alt="" class="img-fluid">
+								<img src="{{ site.url }}/assets/img/elements/d.jpg" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-9 mt-sm-20">
 								<p>Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino players found themselves being chased by the Federal government. But, after a fortnight, the online casino industry came up with a solution and new online casinos started taking root. These began to operate under a different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major part of this was enlisting electronic banking systems that would accept this new clarification and start doing business with me. Listed in this article are the electronic banking systems that accept players from the United States that wish to play in online casinos.</p>
@@ -157,7 +157,7 @@ sitemap: true
 								<p class="text-right">Before we discuss all of the things that could be affecting your PC’s performance, let’s talk a little about what symptoms</p>
 							</div>
 							<div class="col-md-3">
-								<img src="img/elements/d.jpg" alt="" class="img-fluid">
+								<img src="{{ site.url }}/assets/img/elements/d.jpg" alt="" class="img-fluid">
 							</div>
 						</div>
 					</div>
@@ -206,7 +206,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">01</div>
-									<div class="country"> <img src="img/elements/f1.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f1.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -216,7 +216,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">02</div>
-									<div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f2.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -226,7 +226,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">03</div>
-									<div class="country"> <img src="img/elements/f3.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f3.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -236,7 +236,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">04</div>
-									<div class="country"> <img src="img/elements/f4.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f4.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -246,7 +246,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">05</div>
-									<div class="country"> <img src="img/elements/f5.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f5.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -256,7 +256,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">06</div>
-									<div class="country"> <img src="img/elements/f6.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f6.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -266,7 +266,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">07</div>
-									<div class="country"> <img src="img/elements/f7.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f7.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -276,7 +276,7 @@ sitemap: true
 								</div>
 								<div class="table-row">
 									<div class="serial">08</div>
-									<div class="country"> <img src="img/elements/f8.jpg" alt="flag">Canada</div>
+									<div class="country"> <img src="{{ site.url }}/assets/img/elements/f8.jpg" alt="flag">Canada</div>
 									<div class="visit">645032</div>
 									<div class="percentage">
 										<div class="progress">
@@ -291,28 +291,28 @@ sitemap: true
 						<h3>Image Gallery</h3>
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g1.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g1.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g2.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g2.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g2.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g2.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g3.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g3.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g3.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g3.jpg);"></div></a>
 							</div>
 							<div class="col-md-6">
-								<a href="img/elements/g4.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g4.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g4.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g4.jpg);"></div></a>
 							</div>
 							<div class="col-md-6">
-								<a href="img/elements/g5.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g5.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g5.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g5.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g6.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g6.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g6.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g6.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g7.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g7.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g7.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g7.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g8.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url(img/elements/g8.jpg);"></div></a>
+								<a href="{{ site.url }}/assets/img/elements/g8.jpg" class="img-pop-up"><div class="single-gallery-image" style="background: url({{ site.url }}/assets/img/elements/g8.jpg);"></div></a>
 							</div>
 						</div>
 					</div>
@@ -559,93 +559,3 @@ sitemap: true
 				</div>
 			</div>
 			<!-- End Align Area -->
-
-			<!-- start footer Area -->		
-			<footer class="footer-area section-gap">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-12">
-							<div class="single-footer-widget">
-								<h6>Top Products</h6>
-								<ul class="footer-nav">
-									<li><a href="#">Managed Website</a></li>
-									<li><a href="#">Manage Reputation</a></li>
-									<li><a href="#">Power Tools</a></li>
-									<li><a href="#">Marketing Service</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-6  col-md-12">
-							<div class="single-footer-widget newsletter">
-								<h6>Newsletter</h6>
-								<p>You can trust us. we only send promo offers, not a single spam.</p>
-								<div id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-
-										<div class="form-group row" style="width: 100%">
-											<div class="col-lg-8 col-md-12">
-												<input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-												<div style="position: absolute; left: -5000px;">
-													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-												</div>
-											</div> 
-										
-											<div class="col-lg-4 col-md-12">
-												<button class="nw-btn primary-btn">Subscribe<span class="lnr lnr-arrow-right"></span></button>
-											</div> 
-										</div>		
-										<div class="info"></div>
-									</form>
-								</div>		
-							</div>
-						</div>
-						<div class="col-lg-3  col-md-12">
-							<div class="single-footer-widget mail-chimp">
-								<h6 class="mb-20">Instragram Feed</h6>
-								<ul class="instafeed d-flex flex-wrap">
-									<li><img src="img/i1.jpg" alt=""></li>
-									<li><img src="img/i2.jpg" alt=""></li>
-									<li><img src="img/i3.jpg" alt=""></li>
-									<li><img src="img/i4.jpg" alt=""></li>
-									<li><img src="img/i5.jpg" alt=""></li>
-									<li><img src="img/i6.jpg" alt=""></li>
-									<li><img src="img/i7.jpg" alt=""></li>
-									<li><img src="img/i8.jpg" alt=""></li>
-								</ul>
-							</div>
-						</div>						
-					</div>
-
-					<div class="row footer-bottom d-flex justify-content-between">
-						<p class="col-lg-8 col-sm-12 footer-text m-0 text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-						<div class="col-lg-4 col-sm-12 footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
-					</div>
-				</div>
-			</footer>
-			<!-- End footer Area -->	
-
-			<script src="js/vendor/jquery-2.2.4.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-  			<script src="js/easing.min.js"></script>			
-			<script src="js/hoverIntent.js"></script>
-			<script src="js/superfish.min.js"></script>	
-			<script src="js/jquery.ajaxchimp.min.js"></script>
-			<script src="js/jquery.magnific-popup.min.js"></script>	
-			<script src="js/owl.carousel.min.js"></script>	
-			<script src="js/hexagons.min.js"></script>							
-			<script src="js/jquery.nice-select.min.js"></script>	
-			<script src="js/jquery.counterup.min.js"></script>
-			<script src="js/waypoints.min.js"></script>							
-			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
-		</body>
-	</html>
